--- a/resources/views/layouts/partials/_navbar.edge
+++ b/resources/views/layouts/partials/_navbar.edge
@@ -34,11 +34,20 @@
 
                             <hr class="navbar-divider">
 
-                            <a href="{{ route('logout') }}" class="navbar-item">
+                            <a 
+                                href="{{ route('logout') }}" 
+                                class="navbar-item"
+                                onclick="event.preventDefault();
+                                document.getElementById('logout-form').submit();"
+                            >
                                 <span class="icon">
                                     <i class="fas fa-sign-out-alt"></i>
                                 </span>
                                 <span>Logout</span>
+
+                                <form id="logout-form" action="{{ route('logout') }}" method="post">
+                                    {{ csrfField() }}
+                                </form>
                             </a>
                         </div>
                     </div>
