My Podcasts page.

--- a/resources/views/layouts/partials/_navbar.edge
+++ b/resources/views/layouts/partials/_navbar.edge
@@ -11,7 +11,7 @@
                         <a class="navbar-link">My Account</a>
 
                         <div class="navbar-dropdown">
-                            <a href="{{ route('podcast') }}" class="navbar-item">
+                            <a href="{{ route('myPodcast') }}" class="navbar-item">
                                 <span class="icon">
                                     <i class="fas fa-podcast"></i>
                                 </span>
