--- a/resources/views/podcasts/show.edge
+++ b/resources/views/podcasts/show.edge
@@ -44,7 +44,7 @@
 
         <h2 class="subtitle is-3 has-text-centered">Latest episodes</h2>
 
-        @each(episode in episodes)
+        @each(episode in episodes.data)
           <div class="media">
             <figure class="media-left">
               <div class="image is-96x96">
