--- a/resources/views/categories/show.edge
+++ b/resources/views/categories/show.edge
@@ -20,7 +20,7 @@
         <div class="column is-9">
           <div class="box">
             <div class="columns is-multiline">
-              @each(podcast in podcasts)
+              @each(podcast in podcasts.data)
                 <div class="column is-one-third">
                   <div class="card">
                     <div class="card-image">
