--- a/resources/views/users/partials/_settings_menu.edge
+++ b/resources/views/users/partials/_settings_menu.edge
@@ -1,14 +1,19 @@
 <aside class="menu">
     <p class="menu-label">
-        Settings
+      Settings
     </p>
-
+    
     <ul class="menu-list">
-        <li>
-            <a href="{{ route('settings.account') }}">Edit Account</a>
-        </li>
-        <li>
-            <a href="{{ route('settings.password') }}">Change Password</a>
-        </li>
+      <li>
+        <a
+          class="{{ request.match(['/settings/account']) ? 'is-active' : '' }}"
+          href="{{ route('settings.account') }}">Edit Account</a>
+      </li>
+      <li>
+        <a
+          class="{{ request.match(['/settings/password']) ? 'is-active' : '' }}"
+          href="{{ route('settings.password') }}">Change Password</a>
+      </li>
     </ul>
-</aside>
+  </aside>
+  
